@startuml
class EmployeeController {
    + getCheckInListOfFixedCustomer(int, Model, HttpSession) : String
}

interface Model {
    + addAttribute(String, Object) : Model
}

interface HttpSession {
}

interface EmployeeService {
    + getListNeedCheckInFixedByDepartmentId(int) : List<CheckInFixedDTO>
    + getListCheckedInFixedByDepartmentId(int) : List<CheckedInFixedDTO>
}

class EmployeeServiceImpl {
    + getListNeedCheckInFixedByDepartmentId(int) : List<CheckInFixedDTO>
    + getListCheckedInFixedByDepartmentId(int) : List<CheckedInFixedDTO>
}

interface EmployeeRepository {
    + getListNeedCheckInFixedByDepartmentId(int) : List<CheckInFixedDTO>
    + getListCheckedInFixedByDepartmentId(int) : List<CheckedInFixedDTO>
}

class CheckInFixedDTO {
    - orderDetailId : int
    - username : String
    - productName : String
    - phoneNumber : String
    - duration : int
    - imageUrl : String
}

class CheckedInFixedDTO {
    - orderDetailId : int
    - username : String
    - productName : String
    - phoneNumber : String
    - duration : int
    - price : double
    - checkInTime : DateTime
    - imageUrl : String
}

EmployeeController ..> EmployeeService : <<uses>>
EmployeeController ..> Model : <<uses>>
EmployeeController ..> HttpSession : <<uses>>
EmployeeController ..> CheckInFixedDTO : <<uses>>
EmployeeController ..> CheckedInFixedDTO : <<uses>>

EmployeeServiceImpl ..|> EmployeeService
EmployeeServiceImpl ..> EmployeeRepository : <<uses>>
@enduml